--- a/msi-reader/Cargo.toml
+++ b/msi-reader/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["marcin"]
 edition = "2018"
 
+[lib]
+path = "src/lib.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
